<?xml version="1.0"?>
<package format="2">
  <name>emojicloud_plugin</name>
  <version>0.0.0</version>
  <description>The emojicloud_plugin package</description>

  <maintainer email="leander@blackcoffeerobotics.com">leander</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rviz2</build_depend>
  <build_depend>sensor_msgs</build_depend>
<!--  <build_depend>roslib</build_depend>-->
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rviz2</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
<!--  <build_export_depend>roslib</build_export_depend>-->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
<!--  <exec_depend>roslib</exec_depend>-->


  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
